# cp-react-to-t3

./: .editorconfig  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  test_main.py
nextapp/: package.json  pnpm-lock.yaml
nextapp/src/app/: page.tsx  types.tsx
nextapp/src/app/bruteforce/: page.tsx
nextapp/src/app/react-query/: graph-data.tsx  layout.tsx  list-data.tsx  page.tsx
nextapp/src/app/utils/: provider.tsx
nextjs-page/: .editorconfig  .eslintrc.json  next.config.js  package.json  pnpm-lock.yaml
nextjs-page/src/: config.ts  schemas.ts
nextjs-page/src/components/: card.tsx  display-box.tsx  flex-data.tsx  graph-data.tsx  list-data.tsx  nav.tsx  sensor-card.tsx
nextjs-page/src/components/sensor-button/: duration-selector.tsx  small-selector.tsx
nextjs-page/src/components/svg/: menu.tsx
nextjs-page/src/pages/: _app.tsx  brute.tsx  chartjs.tsx  grid-display.tsx  index.tsx  polling-test.tsx  polling-test2.tsx  polling-test3.tsx  submain.tsx  supabase.tsx  ws.tsx  ws2.tsx
nextjs-page/src/pages/api/: data.ts
nextjs-page/src/pages/broadcast/: index.tsx
nextjs-page/src/pages/sensors/: [uuid].tsx  index.tsx
nextjs-page/src/styles/: globals.css
nextjs-page/src/types/: dtos.ts  sensor.ts
nextjs-page/src/utils/: get-temperature-domain.ts  use-api.ts  use-fetch.tsx
