[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
supabase = "^1.0.3"
uvicorn = "^0.22.0"
pydantic = {version = "<2.0", extras = ["dotenv"]}
arrow = "^1.2.3"
pytest = "^7.4.0"
sqlalchemy = "^2.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.local.dependencies]
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_local_folder = ["main"]
